<resources>
    <string name="app_name">Card Project</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="email_required">Email is required!</string>
    <string name="password_required">Password is required!</string>
    <string name="name_required">Name is required!</string>
    <string name="last_name_required">Last name is required!</string>
    <string name="address_required">Address is required!</string>
    <string name="email_wrong_format">Wrong email format!</string>
    <string name="password_length_error">Password needs to be at least 6 characters long</string>
    <string name="password_no_match">Passwords do not match!</string>
    <string name="cards">Cards</string>
    <string name="favorite_cards">Favorites</string>
    <string name="cart">Cart</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="search">Search</string>
    <string name="add_to_cart">Add to cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store_locator">Store Locator</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity: %1$s</string>
    <string name="price">Price: %1$s €</string>
</resources>