<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cardFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_cards"
        android:title="@string/cards" />
    <item
        android:id="@+id/favoriteFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_star"
        android:title="@string/favorite_cards" />
    <item
        android:id="@+id/cartFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/mapsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_location"
        android:title="@string/store_locator" />
</menu>